# tagchat

./: .gitignore  MAYA Timeline.md  PHASE2-PLANNING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
scripts/: backup.sh  com.deptoflore.tagchat.backup.plist
server/: Dockerfile  landing.html  package-lock.json  package.json  server.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  target  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CalendarView.tsx  ChatView.tsx  DashboardView.tsx  FilesView.tsx  MeetingsView.tsx  SettingsView.tsx  Sidebar.tsx  TasksView.tsx
src/data/: maya-timeline.ts
src/lib/: platform.ts  themes.ts
src/store/: appStore.ts
