[package]
name = "tagchat"
version = "1.0.0"
description = "TagChat — Native desktop collaboration hub for MAYA: Seed Takes Root"
authors = ["Dept of Lore"]
edition = "2021"

[lib]
name = "tagchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
